UPDATE navbar colors

--- a/cardapio.html
+++ b/cardapio.html
@@ -17,12 +17,12 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="site-header sticky-top py-1">
-      <nav class="container">
-        <header class="d-flex justify-content-center py-3">
+    <header class="site-header sticky-top">
+      <nav>
+        <header class="d-flex justify-content-center py-3 bg-dark text-white">
           <ul class="nav nav-pills">
             <li class="nav-item">
-              <a href="index.html" class="nav-link active" aria-current="page">Home</a>
+              <a href="index.html" class="nav-link active bg-success" aria-current="page">Home</a>
             </li>
             <li class="nav-item">
               <a href="feedback.html" class="nav-link">Cardápio</a>
