--- a/cardapio.html
+++ b/cardapio.html
@@ -9,7 +9,8 @@
     <meta name="rating" content="general">
     <meta name="keywords" content="portfolio, desenvolvimento, web">
     <meta name="viewport" content="user-scalable=0, width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-
+    
+    <link rel="icon" href="icon/icons8-sushi-90.png">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
