--- a/cardapio.html
+++ b/cardapio.html
@@ -19,20 +19,18 @@
   </head>
   <body>
     <header class="site-header sticky-top">
-      <nav>
-        <header class="d-flex justify-content-center py-3 bg-dark text-white">
-          <ul class="nav nav-pills">
-            <li class="nav-item">
-              <a href="index.html" class="nav-link active bg-success" aria-current="page">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="feedback.html" class="nav-link">Cardápio</a>
-            </li>
-            <li class="nav-item">
-              <a href="cardapio.html" class="nav-link">Fale Conosco</a>
-            </li>
-          </ul>
-        </header>
+      <nav class="d-flex justify-content-center py-3 bg-dark text-white">
+        <ul class="nav nav-pills">
+          <li class="nav-item">
+            <a href="index.html" class="nav-link active bg-success" aria-current="page">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="feedback.html" class="nav-link">Cardápio</a>
+          </li>
+          <li class="nav-item">
+            <a href="cardapio.html" class="nav-link">Fale Conosco</a>
+          </li>
+        </ul>
       </nav>
     </header>
   </body>
