--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <nav class="d-flex justify-content-center py-3 bg-dark text-white">
         <ul class="nav nav-pills">
           <li class="nav-item">
-            <a href="index.html" class="nav-link active bg-success" aria-current="page">Home</a>
+            <a href="index.html" class="nav-link active bg-primary" aria-current="page">Home</a>
           </li>
           <li class="nav-item">
-            <a href="feedback.html" class="nav-link">Cardápio</a>
+            <a href="cardapio.html" class="nav-link">Cardápio</a>
           </li>
           <li class="nav-item">
-            <a href="cardapio.html" class="nav-link">Fale Conosco</a>
+            <a href="feedback.html" class="nav-link">Fale Conosco</a>
           </li>
         </ul>
       </nav>
