--- a/feedback.html
+++ b/feedback.html
@@ -22,7 +22,7 @@
       <nav class="d-flex justify-content-center py-3 bg-dark text-white">
         <ul class="nav nav-pills">
           <li class="nav-item">
-            <a href="index.html" class="nav-link active bg-primary" aria-current="page">Home</a>
+            <a href="index.html" class="nav-link active" aria-current="page">Home</a>
           </li>
           <li class="nav-item">
             <a href="cardapio.html" class="nav-link">Cardápio</a>
