UPDATE feedback with section tag

--- a/feedback.html
+++ b/feedback.html
@@ -36,9 +36,11 @@
     <main>
       <div class="container d-flex py-5">
         <div class="container fluid">
-          <h4 class="mb-3">Fale Conosco</h4>
-          <hr class="my-2">
-          <h5 class="mb-3">Sua opinião é muito importante para nós.</h5>
+          <section>            
+            <h4 class="mb-3">Fale Conosco</h4>
+            <hr class="my-2">
+            <h5 class="mb-3">Sua opinião é muito importante para nós.</h5>
+          </section>
           <form class="needs-validation" novalidate>
             <div class="row g-3">
               <div class="col-sm-6">
