--- a/index.html
+++ b/index.html
@@ -33,6 +33,44 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <div class="container d-flex py-5">
+        <div class="container fluid">
+          <section>            
+            <h4 class="mb-3">Nossa História</h4>
+            <hr class="my-2">
+          </section>
+          <div id="myCarousel" class="carousel slide my-4" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/joe-han--g4m1WJPGXo-unsplash.jpg" class="bd-placeholder-img" width="100%" height="100%">
+              </div>
+              <div class="carousel-item">
+                <img src="img/oscar-nord-4-2BfjnDyjY-unsplash.jpg" class="bd-placeholder-img" width="100%" height="100%">
+              </div>
+              <div class="carousel-item">
+                <img src="img/zaji-kanamajina-vyEibJSMBkg-unsplash.jpg" class="bd-placeholder-img" width="100%" height="100%">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
+            <div class="col-md-6 px-0">
+              <h1 class="display-4 fst-italic">Sushi-diem</h1>
+              <p class="lead my-4">"O dia do sushi" se inicia a muito tempo atrás, <b>diem</b> é parte da frase latina <i><b>Carpe Diem</b> quam minimum credula postero</i>, extraída de uma das Odes, de Horácio, e tem numerosas traduções possíveis: "colhe o dia", "desfruta o presente", "vive este dia", "aproveita o dia" ou "aproveita o momento". Juntando isso com o nosso amor a culinária japonesa se criou o Sushi-diem, o Sushi-diem simboliza hoje a perfeita sintonia da tradicional culinária japonesa com as inovações e técnicas contemporâneas.</p>
+              <p class="lead mb-0"><a href="cardapio.html" class="text-white fw-bold">Já viu nosso cardápio ?</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
   <script src="js/bootstrap.js"></script>
   <script src="js/bootstrap.min.js"></script>
