UPDATE carousel responsiveness in home page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
   </head>
   <body>
     <header class="site-header sticky-top">
@@ -63,8 +64,13 @@
           </div>
           <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
             <div class="col-md-6 px-0">
-              <h1 class="display-4 fst-italic">Sushi-diem</h1>
-              <p class="lead my-4">"O dia do sushi" se inicia a muito tempo atrás, <b>diem</b> é parte da frase latina <i><b>Carpe Diem</b> quam minimum credula postero</i>, extraída de uma das Odes, de Horácio, e tem numerosas traduções possíveis: "colhe o dia", "desfruta o presente", "vive este dia", "aproveita o dia" ou "aproveita o momento". Juntando isso com o nosso amor a culinária japonesa se criou o Sushi-diem, o Sushi-diem simboliza hoje a perfeita sintonia da tradicional culinária japonesa com as inovações e técnicas contemporâneas.</p>
+              <h1 class="display-6 fst-italic">Sushi-diem</h1>
+              <p class="lead my-4">
+                "O dia do sushi" se inicia a muito tempo atrás, <b>diem</b> é parte da frase latina <i><b>Carpe Diem</b> quam minimum credula postero</i>, extraída de uma das Odes, de Horácio, e tem numerosas traduções possíveis: "colhe o dia", "desfruta o presente", "vive este dia", "aproveita o dia" ou "aproveita o momento".
+              </p>
+              <p class="lead my-4">
+                Juntando isso com o nosso amor a culinária japonesa se criou o <b>Sushi-diem</b>, nós simbolizamos hoje a perfeita sintonia da tradicional culinária japonesa com as inovações e técnicas contemporâneas
+              </p>
               <p class="lead mb-0"><a href="cardapio.html" class="text-white fw-bold">Já viu nosso cardápio ?</a></p>
             </div>
           </div>
